import net.darkhax.curseforgegradle.TaskPublishCurseForge

plugins {
    id 'fabric-loom'
    id 'maven-publish'
    id "com.modrinth.minotaur"
    id 'net.darkhax.curseforgegradle'
}

version = mod_version
group = mod_group_id
base {
    archivesName = mod_id
}

def changelogText = project.file('changelog.md').text
def site_debugMode = false

repositories {
    maven { url = "https://maven.maxhenkel.de/repository/public" }
    maven { url = "https://api.modrinth.com/maven" }
    mavenCentral()
}


loom {
    runs {
        client {
            client()
            setConfigName('Fabric Client 1.21.11')
            ideConfigGenerated(true)
            runDir('runs/client')
        }
    }
}


dependencies {
    // Core Minecraft dependencies
    minecraft "com.mojang:minecraft:${project.minecraft_version}"
    mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"

    // Fabric Loader and API
    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
    modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"

   //modImplementation"curse.maven:sound-physics-remastered-535489:6809526"
   modImplementation"curse.maven:vics-point-blank-961053:7881990"


    // Voice Chat API dependencies
    modRuntimeOnly "maven.modrinth:simple-voice-chat:fabric-${voicechat_version}"
    implementation "de.maxhenkel.voicechat:voicechat-api:${project.voicechat_api_version}"

    // Configuration handling
    compileOnly "com.electronwill.night-config:toml:3.6.0"

    // Forge Config API Port
    modApi "fuzs.forgeconfigapiport:forgeconfigapiport-fabric:${project.forge_config_api_port_version}"
}


processResources {
    inputs.property "version", project.version
    inputs.property "minecraft_version", project.minecraft_version
    inputs.property "loader_version", project.loader_version
    inputs.property "voicechat_api_version", project.voicechat_api_version
    inputs.property "forge_config_api_port_version", project.forge_config_api_port_version

    filteringCharset "UTF-8"

    filesMatching("fabric.mod.json") {
        expand(
                "version": project.version,
                "minecraft_version": project.minecraft_version,
                "loader_version": project.loader_version,
                "voicechat_api_version": project.voicechat_api_version,
                "forge_config_api_port_version": project.forge_config_api_port_version
        )
    }
}

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

jar {
    from("LICENSE") {
        rename { "${it}_${project.mod_group_id}" }
    }
}

tasks.register('publishCurseForge', TaskPublishCurseForge) {
    apiToken = System.getenv("CURSEFORGE_TOKEN")

    def mainFile = upload('1173633', file("build/libs/${mod_id}-${mod_version}.jar"))
    mainFile.displayName = "${mod_name}-${mod_version}"
    mainFile.releaseType = 'beta'
    mainFile.changelog = changelogText
    debugMode = site_debugMode

    mainFile.addRequirement("simple-voice-chat")
    mainFile.addRequirement("forge-config-api-port")
    mainFile.addRequirement("modmenu")
    //mainFile.addOptional("sound-physics-remastered")
}


modrinth {
    token = System.getenv("MODRINTH_TOKEN")// Remember to have the MODRINTH_TOKEN environment variable set or else this will fail - just make sure it stays private!
    projectId = "voiceless-survival" // This can be the project ID or the slug. Either will work!
    versionName = "${mod_name} ${mod_version}"
    versionNumber = "${mod_version}"
    versionType = "beta" // This is the default -- can also be `beta` or `alpha`
    uploadFile = file("build/libs/${mod_id}-${mod_version}.jar") // With Loom, this MUST be set to `remapJar` instead of `jar`!
    gameVersions = ["${minecraft_version}"] as Iterable<? extends String>
    // Must be an array, even with only one version
    loaders = ["fabric"] // Must also be an array - no need to specify this if you're using Loom or ForgeGradle
    changelog = changelogText
    debugMode = site_debugMode


    dependencies { // A special DSL for creating dependencies
        required.project "fabric-api"
        required.project 'simple-voice-chat'
        required.project 'forge-config-api-port'
        required.project 'modmenu'
        //optional.project 'timeless-and-classics-zero'
    }
}



// This task is for uploading to the site above this code
tasks.register('publicModdedSite') {
    dependsOn 'build'
    dependsOn 'publishCurseForge'
    dependsOn 'modrinth'
}